--- a/worksheets/worksheet_03.ipynb
+++ b/worksheets/worksheet_03.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "# Worksheet 03\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Sangjoon Lee\n",
+    "UID: U79516048\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -32,7 +32,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "record\n",
+    "    vectors\n",
+    "graph\n",
+    "    Adjacency list\n",
+    "image\n",
+    "    image of a person\n",
+    "text\n",
+    "    list of words\n",
+    "    books\n",
+    "time series\n",
+    "    global population by year"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,7 +56,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Are these articles covering the same topics? (Uncover topics)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -56,7 +70,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Temperature predictions based on number of cricket chirps per minute."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -68,7 +84,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Ask what and who the model is used / intended for.\n",
+    "2. Process Data\n",
+    "      - \n",
+    "3. Explore Data\n",
+    "      - Analyze data for better understanding and getting idea of what model can be created from it.\n",
+    "      - What might be related to what you're trying to predict?\n",
+    "4. Extract Features\n",
+    "      - Can be done by either getting more data or extracting more information from the existing data.\n",
+    "      - Can you extract better features?\n",
+    "5. Create Model\n",
+    "      - Garbage data in, garbage data out!\n",
+    "      - Is the model easy to explain?\n",
+    "      - When the model fails, can it be explained why?"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -84,7 +114,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "p = just a tuning parameter, greater than or equal to 1\n",
+    "d = number of real dimensional space"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,7 +129,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "when p = 1, manhattan distance (can't go diagonal, only zig-zags)\n",
+    "when p = 2, euclidean distance (can go diagonal)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -108,7 +144,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "As p becomes very large, it starts to return the maximum distance between two vectors along any coordinate dimension."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,7 +158,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No, since if p < 1 then 1/p > 1. This violates the triangle inequality."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -132,7 +172,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "When direction matters more than magnitude."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -144,7 +186,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Jaccard distance accounts for how dissimilar two sets are.\n",
+    "Intersection of data / Union of data."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -214,7 +259,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "(\"hello\", \"hi\", \"my\", \"name\", \"is\", \"Alice\", \"Bob\", \"Claude\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -225,10 +272,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "v1 = [1, 0, 1, 1, 1, 1, 0, 0]\n",
+    "v2 = [1, 0, 1, 1, 1, 0, 1, 0]\n",
+    "v3 = [0, 1, 1, 1, 1, 0, 0, 1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -239,15 +290,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def manhattan_distance(v1, v2):\n",
+    "    assert(len(v1) == len(v2))\n",
+    "    d = len(v1)\n",
+    "    sum = 0\n",
+    "    for i in range(d):\n",
+    "        sum += abs(v1[i] - v2[i])\n",
+    "    return sum\n",
+    "\n",
+    "print(manhattan_distance(v1, v2))\n",
+    "print(manhattan_distance(v1, v3))\n",
+    "print(manhattan_distance(v2, v3))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "v1 and v2 are the most similar vectors under manhattan distance."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -263,9 +338,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 'Alice'), (1, 'Bob'), (2, 'Claude'), (3, 'hello'), (4, 'hi'), (5, 'is'), (6, 'my'), (7, 'name')]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('hi Alice', [1, 0, 0, 0, 1, 0, 0, 0]),\n",
+       " ('hello Claude', [0, 0, 1, 1, 0, 0, 0, 0]),\n",
+       " ('Bob my name is Claude', [0, 1, 1, 0, 0, 1, 1, 1]),\n",
+       " ('hi Claude my name is Alice', [1, 0, 1, 0, 1, 1, 1, 1]),\n",
+       " ('hello Bob', [0, 1, 0, 1, 0, 0, 0, 0])]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "import pprint\n",
+    "\n",
+    "def create_vector(s):\n",
+    "    word_list = []\n",
+    "    for sentence in s:\n",
+    "        for word in sentence.split():\n",
+    "            word_list.append(word)\n",
+    "    word_list = sorted(list(set(word_list)))\n",
+    "    print(list(enumerate(word_list)))\n",
+    "    \n",
+    "    result = []\n",
+    "    for sentence in s:\n",
+    "        vector = [0] * len(word_list)\n",
+    "        for word in sentence.split():\n",
+    "            if word in word_list:\n",
+    "                vector[word_list.index(word)] += 1\n",
+    "        result.append((sentence, vector))\n",
+    "    return result\n",
+    "        \n",
+    "\n",
+    "sentences = [\"hi Alice\", \"hello Claude\", \"Bob my name is Claude\", \"hi Claude my name is Alice\", \"hello Bob\"]\n",
+    "create_vector(sentences)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "(\"bob\", \"hello\", \"hi\", \"Alice\", \"Bob\", )"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -275,11 +405,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "5 rows, 8 columns"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -289,16 +419,68 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 'Alice'), (1, 'Bob'), (2, 'Claude'), (3, 'hello'), (4, 'hi'), (5, 'is'), (6, 'my'), (7, 'name')]\n",
+      "v1: hi Alice v2 hello Claude jaccard distance: 1.0\n",
+      "v1: hi Alice v2 Bob my name is Claude jaccard distance: 1.0\n",
+      "v1: hi Alice v2 hi Claude my name is Alice jaccard distance: 0.6666666666666666\n",
+      "v1: hi Alice v2 hello Bob jaccard distance: 1.0\n",
+      "v1: hello Claude v2 Bob my name is Claude jaccard distance: 0.8333333333333334\n",
+      "v1: hello Claude v2 hi Claude my name is Alice jaccard distance: 0.8571428571428571\n",
+      "v1: hello Claude v2 hello Bob jaccard distance: 0.6666666666666666\n",
+      "v1: Bob my name is Claude v2 hi Claude my name is Alice jaccard distance: 0.42857142857142855\n",
+      "v1: Bob my name is Claude v2 hello Bob jaccard distance: 0.8333333333333334\n",
+      "v1: hi Claude my name is Alice v2 hello Bob jaccard distance: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.spatial import distance\n",
+    "\n",
+    "vectors = create_vector(sentences)\n",
+    "for v1, v2 in itertools.combinations(vectors, 2):\n",
+    "    print(\"v1:\", v1[0], \"v2\", v2[0], \"jaccard distance:\", distance.jaccard(v1[1], v2[1]))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "hello Claude & hello Bob"
+   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.4 64-bit",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
