--- a/worksheets/worksheet_04.ipynb
+++ b/worksheets/worksheet_04.ipynb
@@ -60,20 +60,22 @@
     "\n",
     "Iteration 2\n",
     "-----------\n",
-    "    Centroid 0.25: .5, 1.5, 2\n",
+    "    Centroid 0.25: 0, .5, 1.5, 2\n",
     "    Centroid 4.6: 6. 6,5, 7\n",
     "\n",
-    "    Avg(Centroid 0.25) = 1.3333\n",
+    "    Avg(Centroid 0.25) = 2\n",
     "    Avg(Centroid 4.6) = 6.5\n",
     "\n",
     "Iteration 3\n",
     "-----------\n",
-    "    Centroid 1.3333: 0, .5, 1.5, 2\n",
+    "    Centroid 2: 0, .5, 1.5, 2\n",
     "    Centroid 6.5: 6, 6.5, 7\n",
     "\n",
-    "Iteration 4\n",
-    "-----------\n",
-    "    "
+    "    Avg(Centroid 2): 2 (Unchanging)\n",
+    "    Avg(Centroid 6.5): 6.5 (Unchanging)\n",
+    "\n",
+    "\n",
+    "The resulting centroids are: 2 and 6.5    "
    ]
   },
   {
@@ -115,7 +117,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Always converges."
+    "Always converges.\n",
+    "Proof by contradiction: Two possible cases that they might not converge are\n",
+    "\n",
+    "1. The minimum of the cost function is only reached in the limit\n",
+    "    - Impossible because iterating over a finite set of partitions\n",
+    "2. The alg. gets stuck in a cycle / loop\n",
+    "    - Impossible since requires having a clustering that has a lower cost than itself:\n",
+    "      - If old != new clustering then the cost has improved\n",
+    "      - If old == new clustering then the cost is unchanged."
    ]
   },
   {
@@ -186,7 +196,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The number of clusters should be 2 because it has the highest average silhouette score."
+   ]
   }
  ],
  "metadata": {
