--- a/worksheets/worksheet_04.ipynb
+++ b/worksheets/worksheet_04.ipynb
@@ -194,10 +194,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The number of clusters should be 2 because it has the highest average silhouette score."
+    "The number of clusters should be 3 because all of the clusters are above average and have similar size."
    ]
   }
  ],
