--- a/worksheets/worksheet_04.ipynb
+++ b/worksheets/worksheet_04.ipynb
@@ -209,11 +209,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "d36d178f8f81ea0e482c4faa0c18654a3d07c7f08273a56362dde92db1f70e0b"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.9 64-bit ('env': venv)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -227,9 +224,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.10.4"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
