--- a/worksheets/worksheet_05.ipynb
+++ b/worksheets/worksheet_05.ipynb
@@ -44,7 +44,7 @@
     "| A | 0 | $\\sqrt{2}$  |  3 |  1 |  $\\sqrt{8}$ |\n",
     "| B | $\\sqrt{2}$  | 0 |  $\\sqrt{5}$ |  1 | $\\sqrt{2}$  |\n",
     "| C | 3  |  $\\sqrt{5}$ | 0 | $\\sqrt{10}$  |  $\\sqrt{5}$|\n",
-    "| D | 1 |  1 |  $\\sqrt{10}$ | 0 |  $\\sqrt{5}$ |\n",
+    "| D | 1 |    1 |  $\\sqrt{10}$ | 0 |  $\\sqrt{5}$ |\n",
     "| E | $\\sqrt{8}$ | $\\sqrt{2}$ | $\\sqrt{5}$  | $\\sqrt{5}$  | 0 |"
    ]
   },
@@ -105,11 +105,11 @@
     "\n",
     "|   | A | B | C | D | E |\n",
     "|---|---|---|---|---|---|\n",
-    "| A | 0 |   |   |   |   |\n",
-    "| B |   | 0 |   |   |   |\n",
-    "| C |   |   | 0 |   |   |\n",
-    "| D |   |   |   | 0 |   |\n",
-    "| E |   |   |   |   | 0 |"
+    "| A | 0 | $\\sqrt{2}$  |  3 |  1 |  $\\sqrt{8}$ |\n",
+    "| B | $\\sqrt{2}$  | 0 |  $\\sqrt{5}$ |  1 | $\\sqrt{2}$  |\n",
+    "| C | 3  |  $\\sqrt{5}$ | 0 | $\\sqrt{10}$  |  $\\sqrt{5}$|\n",
+    "| D | 1 |  1 |  $\\sqrt{10}$ | 0 |  $\\sqrt{5}$ |\n",
+    "| E | $\\sqrt{8}$ | $\\sqrt{2}$ | $\\sqrt{5}$  | $\\sqrt{5}$  | 0 |"
    ]
   },
   {
@@ -118,12 +118,12 @@
    "source": [
     "Step 2\n",
     "\n",
-    "|   |   |   |   |   |\n",
+    "|   | AB| C | D | E |\n",
     "|---|---|---|---|---|\n",
-    "|   | 0 |   |   |   |\n",
-    "|   |   | 0 |   |   |\n",
-    "|   |   |   | 0 |   |\n",
-    "|   |   |   |   | 0 |"
+    "| AB| 0 | 3 | 1 |  $\\sqrt{8}$ |\n",
+    "| C | 3 | 0 |  $\\sqrt{10}$ |  $\\sqrt{5}$ |\n",
+    "| D | 1 |  $\\sqrt{10}$ | 0 |  $\\sqrt{5}$ |\n",
+    "| E | $\\sqrt{8}$ | $\\sqrt{5}$  | $\\sqrt{5}$  | 0 |"
    ]
   },
   {
@@ -132,11 +132,11 @@
    "source": [
     "Step 3\n",
     "\n",
-    "|   |   |   |   |\n",
+    "|   |ABD| C | E |\n",
     "|---|---|---|---|\n",
-    "|   | 0 |   |   |\n",
-    "|   |   | 0 |   |\n",
-    "|   |   |   | 0 |"
+    "|ABD| 0 |  $\\sqrt{10}$ | $\\sqrt{8}$  |\n",
+    "| C | $\\sqrt{10}$  | 0 |  $\\sqrt{5}$ |\n",
+    "| E |  $\\sqrt{8}$ | $\\sqrt{5}$  | 0 |"
    ]
   },
   {
@@ -145,10 +145,10 @@
    "source": [
     "Step 4\n",
     "\n",
-    "|   |   |   |\n",
+    "|   |ABDE| C |\n",
     "|---|---|---|\n",
-    "|   | 0 |   |\n",
-    "|   |   | 0 |"
+    "|ABDE| 0 |  $\\sqrt{10}$ |\n",
+    "| C |  $\\sqrt{10}$ | 0 |"
    ]
   }
  ],
