--- a/worksheets/worksheet_07.ipynb
+++ b/worksheets/worksheet_07.ipynb
@@ -584,7 +584,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "36 - 3 - 1 - 6 = 26 disagreements"
+    "36 disagreements"
    ]
   },
   {
@@ -617,8 +617,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For every unique pairs of points, check if the two points share a cluster in each of the clustering.\n",
-    "If they do, return 0 if they also share a cluster in every other clusterings, else 0."
+    "For every unique pairs of points, check if the two points share a cluster in every clustering.\n",
+    "If they do, return 1. If they share no clusters in every clustring, also return 1.\n",
+    "Else, return 0."
    ]
   }
  ],
