--- a/worksheets/worksheet_08.ipynb
+++ b/worksheets/worksheet_08.ipynb
@@ -24,7 +24,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fcb5cef0340>"
+       "<matplotlib.image.AxesImage at 0x7f4099ce8490>"
       ]
      },
      "execution_count": 1,
@@ -97,7 +97,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fcb5cd5ee60>"
+       "<matplotlib.image.AxesImage at 0x7f4099b62fb0>"
       ]
      },
      "execution_count": 3,
@@ -130,12 +130,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([68183.03140563,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ,\n",
+       "           0.        ,     0.        ,     0.        ,     0.        ])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scopy = s.copy()\n",
-    "scopy[1:] = 0.0"
+    "scopy[1:] = 0.0\n",
+    "scopy"
    ]
   },
   {
