--- a/worksheets/worksheet_09.ipynb
+++ b/worksheets/worksheet_09.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "# Worksheet 09\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Sangjoon Lee\n",
+    "UID: U79516048\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -27,7 +27,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Yes\n",
+    "2. No\n",
+    "3. Yes\n",
+    "4. No"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -39,7 +44,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "You split it into training set and testing set."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -56,7 +63,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Underfitting: Underfitting is when the model performs poorly on the training data.\n",
+    "Any model that's not flexible to accomodate the data is a potential for an underfitting model.\n",
+    "\n",
+    "Overfitting: model that fits the trainding model too well.\n",
+    "Overfitting happens when a model learns the detail and noise in the training data to the extent that the noise or random fluctuations in the training data is picked up and learned as concepts by the model."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +90,7 @@
     "data = {\n",
     "    \"Attribute A\" : [3.5, 0, 1, 2.5, 2, 1.5, 2, 3.5, 1, 3, 2, 2, 2.5, 0.5, 0.],\n",
     "    \"Attribute B\" : [4, 1.5, 2, 1, 3.5, 2.5, 1, 0, 3, 1.5, 4, 2, 2.5, 0.5, 2.5],\n",
-    "    \"Class\" : [1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1, 1, 0],\n",
+    "    \"Class\" : [1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1, 1],\n",
     "}"
    ]
   },
@@ -90,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -225,6 +238,7 @@
     "        training_record = {\n",
     "            \"Attribute A\" : data[\"Attribute A\"][i],\n",
     "            \"Attribute B\" : data[\"Attribute B\"][i],\n",
+    "            \"Class\": data[\"Class\"][i]\n",
     "        }\n",
     "        distances.append(\n",
     "            {\n",
@@ -234,8 +248,8 @@
     "        )\n",
     "    distances.sort(key=lambda x: x[\"dist\"])\n",
     "    return distances[:n]\n",
-    "# n_closest_to(unseen_record, 3)\n",
     "\n",
+    "threeClosest = n_closest_to(unseen_record, data, 3)\n",
     "location = ( unseen_record[\"Attribute A\"] , unseen_record[\"Attribute B\"] )\n",
     "radius = 1.0\n",
     "_, axes = plt.subplots()\n",
@@ -256,12 +270,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def majority(points):\n",
-    "    pass"
+    "    classes = []\n",
+    "    for p in points:\n",
+    "        classes.append(p['record']['Class'])\n",
+    "    zero = classes.count(0)\n",
+    "    one = classes.count(1)\n",
+    "    if zero > one:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return 1\n",
+    "\n",
+    "majority(threeClosest)"
    ]
   },
   {
@@ -281,28 +316,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "overall accuracy = 0.6666666666666666\n"
+     ]
+    }
+   ],
    "source": [
     "count = 0\n",
-    "for i in range(...):\n",
+    "for i in range(len(data)):\n",
     "    actual_class = data[\"Class\"][i]\n",
-    "    training_set = ...\n",
-    "    prediction = ...\n",
+    "    testSet = {\n",
+    "        \"Attribute A\" : data[\"Attribute A\"][i],\n",
+    "        \"Attribute B\" : data[\"Attribute B\"][i],\n",
+    "        \"Class\": data[\"Class\"][i]\n",
+    "    }\n",
+    "    training_set = n_closest_to(testSet, data, len(data)-1)\n",
+    "    prediction = majority(training_set)\n",
     "    if prediction == actual_class:\n",
     "        count += 1\n",
     "\n",
-    "print(\"overall accuracy = \")"
+    "print(\"overall accuracy = \" + str(count/len(data)))"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.9 64-bit ('env': venv)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -316,9 +361,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.10.4"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
