--- a/worksheets/worksheet_09.ipynb
+++ b/worksheets/worksheet_09.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "1"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,13 +316,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'Attribute A': [0, 1, 2.5, 2, 1.5, 2, 3.5, 1, 3, 2, 2, 2.5, 0.5, 0.0], 'Attribute B': [1.5, 2, 1, 3.5, 2.5, 1, 0, 3, 1.5, 4, 2, 2.5, 0.5, 2.5], 'Class': [0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1, 1]}\n",
+      "{'Attribute A': [0, 2.5, 2, 1.5, 2, 3.5, 1, 3, 2, 2, 2.5, 0.5, 0.0], 'Attribute B': [1.5, 1, 3.5, 2.5, 1, 0, 3, 1.5, 4, 2, 2.5, 0.5, 2.5], 'Class': [0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1, 1]}\n",
+      "{'Attribute A': [0, 2.5, 1.5, 2, 3.5, 1, 3, 2, 2, 2.5, 0.5, 0.0], 'Attribute B': [1.5, 1, 2.5, 1, 0, 3, 1.5, 4, 2, 2.5, 0.5, 2.5], 'Class': [0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 1, 1]}\n",
       "overall accuracy = 0.6666666666666666\n"
      ]
     }
@@ -336,8 +339,12 @@
     "        \"Attribute B\" : data[\"Attribute B\"][i],\n",
     "        \"Class\": data[\"Class\"][i]\n",
     "    }\n",
-    "    training_set = n_closest_to(testSet, data, len(data)-1)\n",
-    "    prediction = majority(training_set)\n",
+    "    training_set = data.copy() # n_closest_to(testSet, data, len(data)-1)\n",
+    "    training_set[\"Attribute A\"].pop(i)\n",
+    "    training_set[\"Attribute B\"].pop(i)\n",
+    "    training_set[\"Class\"].pop(i)\n",
+    "    print(training_set)\n",
+    "    prediction = majority(n_closest_to(testSet, training_set, 3))\n",
     "    if prediction == actual_class:\n",
     "        count += 1\n",
     "\n",
