--- a/worksheets/worksheet_11.ipynb
+++ b/worksheets/worksheet_11.ipynb
@@ -86,15 +86,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'TP': 2, 'TN': 4, 'FP': 3, 'FN': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "actual_class = [\"Yes\", \"No\", \"No\", \"Yes\", \"No\", \"No\", \"Yes\", \"No\", \"No\", \"No\"]\n",
     "predicted_class = [\"Yes\", \"No\", \"Yes\", \"No\", \"No\", \"No\", \"Yes\", \"Yes\", \"Yes\", \"No\"]\n",
     "\n",
     "def confusion_matrix(actual, predicted):\n",
-    "    return\n",
+    "    result = {\n",
+    "        \"TP\": 0,\n",
+    "        \"TN\": 0,\n",
+    "        \"FP\": 0,\n",
+    "        \"FN\": 0\n",
+    "    }\n",
+    "    for i in range(len(actual)):\n",
+    "        if actual[i] == \"Yes\" and predicted[i] == \"Yes\":\n",
+    "            result[\"TP\"] += 1\n",
+    "        elif actual[i] == \"No\" and predicted[i] == \"No\":\n",
+    "            result[\"TN\"] += 1\n",
+    "        elif actual[i] == \"No\" and predicted[i] == \"Yes\":\n",
+    "            result[\"FP\"] += 1\n",
+    "        elif actual[i] == \"Yes\" and predicted[i] == \"No\":\n",
+    "            result[\"FN\"] += 1\n",
+    "    return result\n",
     "\n",
     "print(confusion_matrix(actual_class, predicted_class))"
    ]
@@ -116,7 +139,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "TP * -1 = -2\n",
+    "\n",
+    "TN * 0 = 0\n",
+    "\n",
+    "FP * 10 = 30\n",
+    "\n",
+    "FN * 5 = 5\n",
+    "\n",
+    "-2 + 0 + 30 + 5 = 33"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -127,10 +160,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33\n"
+     ]
+    }
+   ],
+   "source": [
+    "def classification_cost(actual, predicted, cost_matrix):\n",
+    "    result = 0\n",
+    "    for i in range(len(actual)):\n",
+    "        if actual[i] == \"Yes\" and predicted[i] == \"Yes\":\n",
+    "            result += cost_matrix[\"TP\"]\n",
+    "        elif actual[i] == \"No\" and predicted[i] == \"No\":\n",
+    "            result += cost_matrix[\"TN\"]\n",
+    "        elif actual[i] == \"No\" and predicted[i] == \"Yes\":\n",
+    "            result += cost_matrix[\"FP\"]\n",
+    "        elif actual[i] == \"Yes\" and predicted[i] == \"No\":\n",
+    "            result += cost_matrix[\"FN\"]\n",
+    "    return result\n",
+    "\n",
+    "cost_matrix = {\n",
+    "    \"TP\": -1,\n",
+    "    \"TN\": 0,\n",
+    "    \"FP\": 10,\n",
+    "    \"FN\": 5\n",
+    "}\n",
+    "\n",
+    "print(classification_cost(actual_class, predicted_class, cost_matrix))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -148,10 +211,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6\n",
+      "0.4\n",
+      "0.6666666666666666\n",
+      "0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def accuracy(actual, predicted):\n",
+    "    cm = confusion_matrix(actual, predicted)\n",
+    "    return (cm[\"TP\"] + cm[\"TN\"]) / (cm[\"TP\"] + cm[\"TN\"] + cm[\"FP\"] + cm[\"FN\"])\n",
+    "\n",
+    "def precision(actual, predicted):\n",
+    "    cm = confusion_matrix(actual, predicted)\n",
+    "    return cm[\"TP\"] / (cm[\"TP\"] + cm[\"FP\"])\n",
+    "\n",
+    "def recall(actual, predicted):\n",
+    "    cm = confusion_matrix(actual, predicted)\n",
+    "    return cm[\"TP\"] / (cm[\"TP\"] + cm[\"FN\"])\n",
+    "\n",
+    "def f_measure(actual, predicted):\n",
+    "    p = precision(actual, predicted)\n",
+    "    r = recall(actual, predicted)\n",
+    "    return 2 * p * r / (p + r)\n",
+    "\n",
+    "print(accuracy(actual_class, predicted_class))\n",
+    "print(precision(actual_class, predicted_class))\n",
+    "print(recall(actual_class, predicted_class))\n",
+    "print(f_measure(actual_class, predicted_class))"
+   ]
   }
  ],
  "metadata": {
@@ -161,7 +257,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.4"
   },
   "orig_nbformat": 4,
